tests/fixtures/valid/multi/assertions/src/checks/main.gcl
// main.gcl -- cross-file assumes test
include checks.lib().{ limit };
import checks.lib.{ limit_positive };

param value: Dimensionless = 42.0;

#[assumes(limit_positive)]
node ratio: Dimensionless = @value / @limit;
