tests/fixtures/invalid/inline_dag_type_import_without_constructor.gcl
// A selective `type` import brings only the type namespace, not the same-named constructor.
pub type TransferResult {
    TransferResult(value: Dimensionless),
}

dag build_transfer {
    import inline_dag_type_import_without_constructor.{ type TransferResult };

    node result: TransferResult = TransferResult(value: 1.0);
}

include build_transfer().{ result };
